--- a/statics/css/index.css
+++ b/statics/css/index.css
@@ -270,6 +270,15 @@ ul,
     animation: scroll 15s linear infinite;
 }
 
+@keyframes scroll {
+    0% {
+        transform: translateX(100%);
+    }
+    100% {
+        transform: translateX(-100%);
+    }
+}
+
 .slider {
     position: relative;
     width: 100%;
